# gutilities

./: CMakeLists.txt  LICENSE  main.cpp
gutilities/: CMakeLists.txt
gutilities/gcolors/: CMakeLists.txt  gcolors.hpp
gutilities/gio/: CMakeLists.txt  Console.hpp  gio_utils
gutilities/gmath/: CMakeLists.txt  Vector2.hpp  Vector3.hpp  math.hpp
gutilities/gmath/shapes/: CMakeLists.txt  Shape.hpp  shapes.hpp
gutilities/gmath/shapes/collisions/: CMakeLists.txt  collisions.hpp
gutilities/gtiming/: CMakeLists.txt  Stopwatch.hpp  Time.hpp  TimeFormat.hpp  TimeSegment.hpp  TimeStamp.hpp  dates.hpp  timing.hpp
gutilities/gutils/: Array.hpp  AutoBitBoolArray.hpp  BitBoolArray.hpp  CMakeLists.txt  ENUM_CLASS.hpp  Result.hpp  basic_array_tests.hpp  bit_utils.hpp  gutils.hpp
